auto resp pldm request
test pass for:
   sudo pldmtool base GetPLDMVersion -m 8 -t 0 -v
   sudo pldmtool base GetTID -m 8 -v

--- a/sfx/driver/Makefile
+++ b/sfx/driver/Makefile
@@ -7,9 +7,12 @@ all:
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules
 
 clean:
-	rm -f demo send
+	rm -f demo send *.o
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) clean
 
 
-test:
-	gcc demo.c -o demo
+demo:
+	gcc demo.c pldm.c -o demo
+
+send:
+	gcc send.c -o send
